# caddieGPT

./: .gitignore  README.md
caddie_backend/: .gitignore  main.py  pyproject.toml
caddie_backend/.upm/: store.json
caddie_contracts/: .gitignore  README.md  bun.lockb  caddie_json.json  foundry.toml  package.json  remappings.txt
caddie_contracts/script/: Deploy.s.sol
caddie_contracts/src/: CaddieGPT.sol
caddie_contracts/src/interfaces/: IOracle.sol
caddie_frontend/: .gitignore  README.md
caddie_frontend/src/: wagmi.ts
caddie_frontend/src/abis/: caddieGPTABI.json
caddie_frontend/src/app/: layout.tsx  page.tsx  providers.tsx
caddie_frontend/src/app/propose/: page.tsx
caddie_frontend/src/app/propose/[daoId]/: DraftProposal.tsx  page.tsx
caddie_frontend/src/app/vote/: page.tsx
caddie_frontend/src/components/: index.ts
caddie_frontend/src/components/DarkModeButton/: DarkModeButton.tsx
caddie_frontend/src/components/Footer/: Footer.tsx
caddie_frontend/src/components/Header/: Header.tsx
caddie_module/: .gitignore  pyproject.toml
caddie_module/caddie/: component.yaml  run.py  schemas.py
caddie_module/caddie/datas/: snapshot.dcl.eth.json
data_collection/: .gitignore  main.py  pyproject.toml
data_collection/kb/: output_1.json  output_2.json
